# tennis_scrapper

./: .gitignore  CLI_USAGE.md  Dockerfile  docker-compose.yml  elo.ipynb  pyproject.toml  tennis_data.db
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/migrations/versions/: 5aee43fa1221_add_more_indexes_to_matches.py  8f626612d8fa_rename_match_cols.py  (+1 more)
backend/tennis_scrapper/: bets_tui.py
conf/: settings.toml
migrations/: env.py
migrations/versions/: 0ba2dfb80f85_add_index_on_date_to_matches.py  116d527390b1_add_index_on_ranking.py  1f025e83e40c_add_indexes_to_ranking.py  db5ac7dae2a6_add_index.py
predictions/2025-08-21/: predictions.csv
predictions/2025-08-22/: predictions.csv
resources/: cols_data.json
script/: run_all.sh
tennis_scrapper/: bets_tui.py  main.py  plot.py  predict.py  train.py
tennis_scrapper/cli/: fill_missing_data.py  generate_stats.py  history_provider.py  scrap_all.py  scrap_all_matches.py  scrap_matches.py  scrap_players.py  scrap_ranking.py  scrap_tournament.py  scrap_tournaments.py
tennis_scrapper/conf/: config.py
tennis_scrapper/data/: add_atp.py  add_elo.py  add_rankings.py  elo.py
tennis_scrapper/db/: db_utils.py  models.py
tennis_scrapper/ml/: preprocess_data.py
tennis_scrapper/scrap/: matches.py  players.py  rankings.py  tournaments.py  urls.py
tennis_scrapper/stats/: compute_stats.py  fetch_db.py  stats_utils.py
tennis_scrapper/tennis_api/: app.py  deps.py  main.py
tennis_scrapper/utils/: http_utils.py  path_helper.py  str_utils.py
tests/: test_scrap_matches.py  test_scrap_players.py  test_scrap_tournaments.py
tests/scrap/: test_scrap_tournaments.py
tests/stats/: test_stats_utils.py
(+39 files in other folders)
