[project]
name = "tennis-data-scapper"
version = "0.1.0"
description = "A simple scrapper to extract tennis matches data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.12",
    "beautifulsoup4>=4.13.4",
    "dynaconf>=3.2.11",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.30.0",
    "alembic>=1.16.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
