[project]
name = "tennis-data-scapper"
version = "0.1.0"
description = "A simple scrapper to extract tennis matches data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.12",
    "beautifulsoup4>=4.13.4",
    "dynaconf>=3.2.11",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.30.0",
    "alembic>=1.16.2",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "jupyter>=1.1.1",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.4",
    "seaborn>=0.13.2",
    "catboost>=1.2.8",
    "pytest>=8.4.1",
    "textual>=5.3.0",
    "fastapi>=0.114.0",
    "uvicorn>=0.30.6",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "black>=25.1.0",
    "pyinstrument>=5.1.1",
    "ruff>=0.12.9",
    "vulture>=2.14",
]

[tool.ruff]
extend-exclude = [
    "migrations",
]
